# commandergenius

./: .gitignore  .gitmodules  build-vrx.sh.template  build.sh  prepare_submodules.sh  todo.txt
project/: AndroidManifest.xml  project.properties
project/java/: VRXActivity.java
project/jni/: Application.mk  Settings.mk
project/jni/application/: setEnvironment-armeabi-v7a.sh  setEnvironment.sh
project/jni/application/xserver-gimp/: AndroidPreBuild.sh
project/jni/application/xserver-vrx/: AndroidAppSettings.cfg  AndroidBuild.sh
project/jni/application/xserver-vrx/vrxwm/: Makefile.am  algebra.cc  algebra.h  android-build.sh  common.h  configure.ac  cursor.cc  cursor.h  gl-utils.cc  gl-utils.h  gl-utls.cc  vrx_jni.cc  vrx_renderer.cc  vrx_renderer.h  vrx_types.h  vrxwindow.cc  vrxwindow.hh  wm-util.cpp  wm.cpp  wm.h  world_layout_data.h
project/jni/openssl/: setCrossEnvironment-armeabi-v7a.sh  setCrossEnvironment-armeabi.sh
project/jni/openssl/include/openssl/: opensslconf.h
project/res/values/: strings.xml
project/src/: Unpacker.java  VRXActivity.java  VRXServer.java
