#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([wrxvm], [0.0.1], [no@email.com])
AC_CONFIG_MACRO_DIRS([m4])
AC_CONFIG_SRCDIR([vrx_renderer.cc])
AC_CONFIG_HEADERS([config.h])

AC_ENABLE_SHARED
AC_DISABLE_STATIC
AM_INIT_AUTOMAKE
LT_INIT

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.
AC_CHECK_HEADER_STDBOOL
AC_C_INLINE
AC_TYPE_UINT64_T

# Checks for library functions.

AC_OUTPUT([
Makefile
])
